# WLED_Music_Sync

./: .env_example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  build_exe.py  controller_presets.txt  fetch_presets.py  main.py  music_analyzer.py  music_sync.py  pyproject.toml  readme.md  readme_timings.md  requirements.txt  setup.py  timings.yml  update_preset_comments.py  wled_preset_uploader.py
config/: controllers.yml
docs/: usage.md
examples/: timecode_example.py
halloween_leds/: controller_config.py
scripts/: build.py
songs/: Song1-Takedown.txt  Song2-HowItsDone(Shortened).txt  Song4-Golden.txt  Song4_Ha-Breaths.txt  Song8 - Free.txt.bak  Song8-Free.txt  Song8-Free.txt.bak  Song9-SoundsLike-Shortened.txt  effectlist.txt
tests/: conftest.py  test_music_sync.py
wled_music_sync/: __init__.py  config.py  controller.py  gui.py  models.py  music_sync.py  path_config.py  scheduler.py  timecode_sync.py
